--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,41 +1,58 @@
 {
-    "manifest_version": 3,
-    "name": "Simplify",
-    "version": "1.0",
-    "description": "Select text, send it to a local API (localhost:5000), and display the response.",
-    "permissions": [
-       "activeTab",
-       "scripting",
-       "storage"
-    ],
-    "background": {
-      "service_worker": "service-worker.js"
-    },
-    "action": {
-      "default_icon": {
-        "16": "icons/icon16.png",
-        "48": "icons/icon48.png"
-      },
-      "default_title": "Simplify",
-      "default_popup": "popup/popup.html"
-    },
-    "icons": {
+  "manifest_version": 3,
+  "name": "Simplify & Read Aloud",  
+  "version": "1.1", 
+  "description": "Select text, simplify it via local API, read it aloud, or give feedback. Includes keyboard shortcuts and toggles.",
+  "permissions": [
+     "activeTab",
+     "scripting",
+     "storage",
+     "commands"     
+  ],
+  "background": {
+    "service_worker": "service-worker.js" 
+  },
+  "action": {
+    "default_icon": {
       "16": "icons/icon16.png",
-      "48": "icons/icon48.png",
-      "128": "icons/icon128.png"
+      "48": "icons/icon48.png"
     },
-    "host_permissions": [
-      "http://localhost:5000/*"
-    ],
-    "content_scripts": [
-      {
-        "matches": ["<all_urls>"],
-        "js": ["content.js"],
-        "css": ["styles.css"],
-        "run_at": "document_idle"
-      }
-    ],
-    "web_accessible_resources": [
+    "default_title": "Simplify Settings", 
+    "default_popup": "popup/popup.html"
+  },
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  },
+  "host_permissions": [
+    "http://localhost:5000/*" 
+  ],
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content.js"],
+      "css": ["styles.css"], 
+      "run_at": "document_idle"
+    }
+  ],
+  "commands": { 
+    "simplify-text": {
+      "suggested_key": {
+        "default": "Ctrl+Shift+S", 
+        "mac": "Command+Shift+S"
+      },
+      "description": "Simplify Selected Text"
+    },
+    "read-aloud": {
+      "suggested_key": {
+        "default": "Ctrl+Shift+A", 
+        "mac": "Command+Shift+A"
+      },
+      "description": "Read Selected Text Aloud"
+    }
+  }, 
+  "web_accessible_resources": [
 
-    ]
-  }
+  ]
+}
